--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,6 @@
 flask==2.3.3
 flask-cors==4.0.0
-python-dotenv==1.0.0 
+python-dotenv==1.0.0
+opencv-python==4.8.1.78
+numpy==1.26.0
+go2-webrtc-connect==1.0.0
